@@ -1,3 +1,12 @@
+2007-04-13  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>
+
+	* pycvsanaly/plugins/graphs/__init__.py:
+	* pycvsanaly/plugins/__init__.py:
+	* pycvsanaly/main.py:
+
+	Add support for plugin specific command line options. Add --output-dir
+	option in graphs plugin. Fixes bug #257.
+
 2007-04-12  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>
 
 	* pycvsanaly/plugins/graphs/__init__.py:
